cabal-version: 2.2

name: hw
version: 0

category: Haskell
data-dir: data
data-files: favicon.ico
description: The web server that powers Haskell Weekly.
license-file: LICENSE.txt
license: MIT
maintainer: Taylor Fausak
synopsis: Haskell Weekly

source-repository head
    location: https://github.com/haskellweekly/hw
    type: git

flag pedantic
    default: False
    manual: True

common library
    build-depends:
        , base ^>= 4.15.0
    default-language: Haskell2010
    ghc-options:
        -Weverything
        -Wno-implicit-prelude
        -Wno-missing-deriving-strategies
        -Wno-missing-export-lists
        -Wno-missing-exported-signatures
        -Wno-missing-safe-haskell-mode
        -Wno-prepositive-qualified-module
        -Wno-safe
        -Wno-unsafe

    if flag(pedantic)
        ghc-options: -Werror

common executable
    import: library

    build-depends: hw
    ghc-options: -rtsopts -threaded

library
    import: library

    autogen-modules: Paths_hw
    build-depends:
        , bytestring ^>= 0.11.2
        , http-types ^>= 0.12.3
        , text ^>= 2.0
        , wai ^>= 3.2.3
        , warp ^>= 3.3.18
    exposed-modules: HW
    hs-source-dirs: source/library
    other-modules: Paths_hw

executable hw
    import: executable

    hs-source-dirs: source/executable
    main-is: Main.hs

test-suite hw-test-suite
    import: executable

    hs-source-dirs: source/test-suite
    main-is: Main.hs
    type: exitcode-stdio-1.0
