cabal-version: 2.2

name: hw
version: 0.0.0.0

category: Haskell
data-dir: data
data-files:
    favicon.ico
    index.css
    index.xsl
    robots.txt
description: The web server that powers Haskell Weekly.
license-file: LICENSE.txt
license: MIT
maintainer: Taylor Fausak
synopsis: Haskell Weekly

source-repository head
    location: https://github.com/haskellweekly/hw
    type: git

flag pedantic
    default: False
    manual: True

common library
    build-depends:
        , base ^>= 4.15.0
    default-language: Haskell2010
    ghc-options:
        -Weverything
        -Wno-all-missed-specialisations
        -Wno-implicit-prelude
        -Wno-missing-deriving-strategies
        -Wno-missing-export-lists
        -Wno-missing-exported-signatures
        -Wno-missing-safe-haskell-mode
        -Wno-prepositive-qualified-module
        -Wno-safe
        -Wno-unsafe

    if flag(pedantic)
        ghc-options: -Werror

common executable
    import: library

    build-depends: hw
    ghc-options: -rtsopts -threaded

library
    import: library

    autogen-modules: Paths_hw
    build-depends:
        , bytestring ^>= 0.11.2
        , case-insensitive ^>= 1.2.1
        , containers ^>= 0.6.5
        , exceptions ^>= 0.10.4
        , http-types ^>= 0.12.3
        , text ^>= 1.2.5
        , wai ^>= 3.2.3
        , warp ^>= 3.3.18
        , xml-conduit ^>= 1.9.1
    exposed-modules:
        HW
        HW.Class.GetDataFileName
        HW.Exception.DisallowedMethod
        HW.Exception.InvalidMethod
        HW.Exception.InvalidOption
        HW.Exception.InvalidPort
        HW.Exception.UnexpectedArgument
        HW.Exception.UnknownOption
        HW.Exception.UnknownRoute
        HW.Extra.Http
        HW.Handler.Common
        HW.Handler.Favicon.Get
        HW.Handler.Index.Get
        HW.Handler.Robots.Get
        HW.Handler.Style.Get
        HW.Handler.Template.Get
        HW.Type.Config
        HW.Type.Flag
        HW.Type.Root
        HW.Type.Route
        HW.Vendor.ByteString
        HW.Vendor.Exception
        HW.Vendor.Http
        HW.Vendor.Map
        HW.Vendor.Text
        HW.Vendor.Wai
        HW.Vendor.Warp
        HW.Vendor.Xml
    hs-source-dirs: source/library
    other-modules: Paths_hw

executable hw
    import: executable

    hs-source-dirs: source/executable
    main-is: Main.hs

test-suite hw-test-suite
    import: executable

    hs-source-dirs: source/test-suite
    main-is: Main.hs
    type: exitcode-stdio-1.0
